# summarizer-with-wasm

./: Cargo.toml  LICENSE_MIT  README.md
src/: doc_extracter.rs  frequency.rs  lib.rs  summarizer.rs
www/: index.html  index.js  package-lock.json  package.json  skeleton.css  webpack.config.js
